--- a/css/last_responsive.css
+++ b/css/last_responsive.css
@@ -15,6 +15,11 @@
         gap: 1.5rem;
     }
 
+    section > article > div:nth-child(2) {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
     section > p {
         font-size: 15px;
     }
