--- a/css/mreow_style.css
+++ b/css/mreow_style.css
@@ -32,12 +32,16 @@ section > article {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 2rem;
 }
 
 section > article > div {
     width: 250px;
     height: 250px;
+}
+
+section > article > div:nth-child(2) {
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 section > article > div > img {
